# mocheqos

./: .gitignore  CFSM.hs  Dockerfile  DotStuff.hs  GCParser.hs  GCParser.y  LICENSE  Misc.hs  PomsetSemantics.hs  README  README.md  SyntacticGlobalChoreographies.hs  SystemParser.y  TS.hs  WellFormedness.hs  cabal.project  chorgram.cabal  entrypoint.sh  mocheqos-tool.cabal  prepare-artifact.sh  project-nested-choices.sh  project.hs
QoS/: CFSM.hs  Logic.hs
QoS/CFSM/: Lexer.x  Parser.y  QoSMapLexer.x  QoSMapParser.y
QoS/Logic/: Lexer.x  Parser.y
app/: mocheqos.hs
aux/: sgc-mode.el
experiments/amazon-cloud/: price-bound-1.ql  price-bound-2.ql  price-bound-3.ql  price-bound-4.ql  sys.fsa  sys.qosfsa
experiments/format-example/: Phi.ql  sys.fsa  sys.qosfsa
experiments/loop-unfolding/: plot-results.py  run-experiments.py  sys.qosfsa
experiments/model-extraction/: phi1.ql  phi2.ql  phi3.ql  phi4.ql  readme  run-experiments.py  sys.fsa  sys.qosfsa
experiments/nested-choices/: generate-data.py  plot-results.py  run-experiments.py
simple-smt/: README
smt-lib/: README
test/QoS/: LogicSpec.hs
wiki/: Home.md  experiments.md  home.md  installation.md  syntax.md  usage.md
