cabal-version:  3.6
name:           mocheqos-tool
version:        1.0
build-type:     Simple

executable project-gc
  hs-source-dirs: .
  main-is: project.hs
  build-depends: 
    base,
    filepath,
    text,
    containers,
    MissingH,
    hashable,
    array,
    smt-lib,
    directory,
    hxt,
    split,
    simple-smt,
    unordered-containers,
    transformers
  other-modules:
    CFSM,
    DotStuff,
    ErlanGC,
    FSA,
    GCParser,
    Misc,
    PomsetSemantics,
    QoS.CFSM,
    QoS.CFSM.Lexer,
    SyntacticGlobalChoreographies,
    WellFormedness

executable mocheqos
  hs-source-dirs: 
    .
    app/
  main-is: mocheqos.hs
  build-depends:
    base,
    containers,
    optparse-applicative,
    transformers,
    text,
    filepath,
    directory,
    hashable,
    MissingH,
    smt-lib,
    array,
    hxt,
    split,
    simple-smt,
    unordered-containers
  other-modules:
    CFSM,
    DotStuff,
    ErlanGC,
    FSA,
    GCParser,
    Misc,
    PomsetSemantics,
    QoS.CFSM,
    QoS.CFSM.Lexer,
    QoS.CFSM.Parser,
    QoS.CFSM.QoSMapLexer,
    QoS.CFSM.QoSMapParser,
    QoS.Logic,
    QoS.Logic.Lexer,
    QoS.Logic.Parser,
    SystemParser,
    SyntacticGlobalChoreographies,
    TS
  build-tool-depends:
    alex:alex,
    happy:happy

test-suite hspec
  main-is: Spec.hs
  type: exitcode-stdio-1.0
  build-depends: base
               , hspec
               , QuickCheck
               , containers
               , smt-lib
               , transformers
  other-modules:
    QoS.LogicSpec
  hs-source-dirs: test
  build-tool-depends: hspec-discover:hspec-discover == 2.*
